--- a/ML-Action/10-text-processing.ipynb
+++ b/ML-Action/10-text-processing.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -11,11 +11,11 @@
      "text": [
       "package版本信息：\n",
       "numpy:       1.19.2\n",
-      "pandas:      1.2.2\n",
-      "matplotlib:  3.3.4\n",
-      "sklearn:     0.23.2\n",
+      "pandas:      1.2.1\n",
+      "matplotlib:  3.3.2\n",
+      "sklearn:     0.22.1\n",
       "seaborn:     0.11.1\n",
-      "plotly:      4.14.3\n"
+      "plotly:      4.14.1\n"
      ]
     }
    ],
@@ -56,8 +56,9 @@
     "\n",
     "上述两类任务都需要对文本数据进行处理以提取特征，以下介绍文本处理过程中的一些通用流程和概念。\n",
     "\n",
-    "在文本分析的语境中，数据集通常被称为语料库（corpus），每个由单个文本表示的数据点被称为文档（ document）。\n",
+    "在文本分析的语境中，数据集通常被称为语料库（corpus），每个由单个文本表示的数据点被称为文档（document）。\n",
     "\n",
+    "一般有两种表示法：\n",
     "+ 词袋表示法  \n",
     "舍弃输入文本中的大部分结构，如章节、段落、句子和格式，**只计算语料库中每个单词在每个文本中的出现频次** .  \n",
     "通常计算步骤分为如下 3 个：\n",
@@ -71,10 +72,13 @@
     "\n",
     "\n",
     "\n",
-    "+ 此外，对于单词处理，特别是分布（Tokenization）这一步，还可以做额外的处理.  \n",
-    "词表中通常同时包含某些单词的单数形式和复数形式，这个问题可以通过**用词干（word stem）表示每个单词来解决**，通常有两种方式：\n",
-    "  1. 基于规则的启发法，通常将其称为**词干提取（stemming）**\n",
-    "  2. 使用由已知单词形式组成的字典（明确的且经过人工验证的系统），通常称为**词形还原（lemmatization）**\n",
+    "此外，对于单词处理，特别是分词（Tokenization）这一步，还可以做额外的处理.  \n",
+    "词表中通常同时包含某些单词的单复数形式、各种时态形式，这个问题可以通过**用词干（word stem）表示每个单词来解决**。  \n",
+    "通常有两种方式：\n",
+    "1. 基于规则的启发法（比如删除常见的后缀），通常将其称为**词干提取（stemming）**\n",
+    "2. 使用由已知单词形式组成的字典（明确的且经过人工验证的系统），通常称为**词形还原（lemmatization）**\n",
+    "\n",
+    "一般说来，**词形还原相比于词干提取更加好用**。\n",
     "  \n",
     "  \n",
     "完成上面这些步骤，通常有两个包可以使用：\n",
@@ -157,16 +161,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "CountVectorizer()"
+       "CountVectorizer(analyzer='word', binary=False, decode_error='strict',\n",
+       "                dtype=<class 'numpy.int64'>, encoding='utf-8', input='content',\n",
+       "                lowercase=True, max_df=1.0, max_features=None, min_df=1,\n",
+       "                ngram_range=(1, 1), preprocessor=None, stop_words=None,\n",
+       "                strip_accents=None, token_pattern='(?u)\\\\b\\\\w\\\\w+\\\\b',\n",
+       "                tokenizer=None, vocabulary=None)"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -178,7 +187,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -195,7 +204,7 @@
        " 'one': 4}"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -207,7 +216,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -216,7 +225,7 @@
        "['and', 'document', 'first', 'is', 'one', 'second', 'the', 'third', 'this']"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -228,7 +237,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -240,7 +249,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -249,19 +258,20 @@
        "scipy.sparse.csr.csr_matrix"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "# 直接得到的 X 是个稀疏矩阵\n",
     "X = count_vec.transform(corpus)\n",
     "type(X)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -280,7 +290,7 @@
        "       [0, 1, 1, 1, 0, 0, 1, 0, 1]], dtype=int64)"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -292,16 +302,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "TfidfVectorizer()"
+       "TfidfVectorizer(analyzer='word', binary=False, decode_error='strict',\n",
+       "                dtype=<class 'numpy.float64'>, encoding='utf-8',\n",
+       "                input='content', lowercase=True, max_df=1.0, max_features=None,\n",
+       "                min_df=1, ngram_range=(1, 1), norm='l2', preprocessor=None,\n",
+       "                smooth_idf=True, stop_words=None, strip_accents=None,\n",
+       "                sublinear_tf=False, token_pattern='(?u)\\\\b\\\\w\\\\w+\\\\b',\n",
+       "                tokenizer=None, use_idf=True, vocabulary=None)"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -313,7 +329,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -330,7 +346,7 @@
        " 'one': 4}"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -341,7 +357,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -350,7 +366,7 @@
        "['and', 'document', 'first', 'is', 'one', 'second', 'the', 'third', 'this']"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -361,7 +377,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -370,7 +386,7 @@
        "scipy.sparse.csr.csr_matrix"
       ]
      },
-     "execution_count": 39,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -382,7 +398,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -405,7 +421,7 @@
        "        0.        , 0.38408524, 0.        , 0.38408524]])"
       ]
      },
-     "execution_count": 40,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -417,16 +433,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "TfidfTransformer()"
+       "TfidfTransformer(norm='l2', smooth_idf=True, sublinear_tf=False, use_idf=True)"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -439,7 +455,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -449,7 +465,7 @@
        "\twith 21 stored elements in Compressed Sparse Row format>"
       ]
      },
-     "execution_count": 41,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -461,7 +477,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -484,7 +500,7 @@
        "        0.        , 0.38408524, 0.        , 0.38408524]])"
       ]
      },
-     "execution_count": 42,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -498,7 +514,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# NLTK使用\n",
+    "# NLTK\n",
     "\n",
     "NLTK的API结构参考这里 [NLTK Python Module Index](https://www.nltk.org/py-modindex.html).\n",
     "\n",
@@ -561,7 +577,12 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true,
+    "jupyter": {
+     "outputs_hidden": true
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -655,9 +676,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# spaCy使用\n",
+    "# spaCy\n",
     "\n",
     "spaCy的使用和NLTK完全不同，NLTK大体上还是面向过程的调用函数方式来完成任务，而spaCy是采用的pipeline方式完成.  \n",
+    "\n",
+    "spaCy中，训练好的模型被称为 **trained pipeline**，这些pipilines实际上也是单独的一个python package。\n",
+    "\n",
+    "spaCy的官网中，提供了一个有关文本处理术语的简单教程 [spacy-101](https://spacy.io/usage/spacy-101)，可以看一看。\n",
     "\n",
     "spaCy的使用步骤如下：\n",
     "1. 载入语言模型.  \n",
@@ -674,7 +699,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import spacy"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "+ 加载语言模型"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -683,21 +724,45 @@
        "spacy.lang.en.English"
       ]
      },
-     "execution_count": 71,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "import spacy\n",
-    "# 首先必须载入一个语言模型\n",
+    "# 第一种方式\n",
     "nlp = spacy.load('en_core_web_sm')\n",
+    "# 或者从自定义的位置加载\n",
+    "# nlp = spacy.load(\"/path/to/en_core_web_sm\") \n",
     "nlp.__class__"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "spacy.lang.en.English"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# 第二种方式，以单独的package加载\n",
+    "import en_core_web_sm\n",
+    "nlp = en_core_web_sm.load()\n",
+    "nlp.__class__"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -706,7 +771,7 @@
        "['tagger', 'parser', 'ner']"
       ]
      },
-     "execution_count": 72,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -733,15 +798,42 @@
     }
    ],
    "source": [
-    "# 获取Doc对象\n",
+    "# 实例化Doc对象\n",
     "text = \"Apple is looking at buying U.K. startup for $1 billion\"\n",
     "doc = nlp(text)\n",
     "doc.__class__"
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "`Doc`对象实现了`__getitem__()`方法和`__iter__()`方法，所以可以索引或者迭代"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'spacy.tokens.token.Token'>\n",
+      "Apple\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 索引token\n",
+    "print(doc[0].__class__)\n",
+    "print(doc[0])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -764,9 +856,52 @@
     }
    ],
    "source": [
+    "# 打印分词后的 token 和词形还原后的样子\n",
     "print(\"token.text\", \"token.lemma_\")\n",
     "for token in doc:\n",
     "    print(token.text,  token.lemma_)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'spacy.tokens.token.Token'>\n",
+      "Apple\n",
+      "<class 'numpy.ndarray'>\n",
+      "(96,)\n",
+      "[-1.2839912  -0.43607238  0.99951804 -2.360404    3.0775332  -3.6693985\n",
+      "  1.5802528   2.0529222  -1.294323    2.1639879   2.7700207   0.17506354\n",
+      "  0.0953052   0.4334653  -0.07980722 -0.60584813  0.39560458  5.2149515\n",
+      "  0.88727987 -2.617487    1.8526615   1.1368239   3.9496171  -2.648594\n",
+      " -0.06955147  2.0044653  -3.7960272  -3.1989868   0.35334867 -0.9531797\n",
+      " -0.78921217 -2.428277    0.08931901 -3.615139    0.07555252  1.1542726\n",
+      "  2.0777988  -0.10464281  1.0964748  -1.7745137   3.4849372  -0.02747166\n",
+      "  3.3159113  -1.8869483   0.139435   -2.0437162   1.5334139   4.711532\n",
+      " -3.0375469  -0.8940801  -0.9046861   0.57582724 -2.6169019  -1.4401975\n",
+      " -3.3344631   2.4536233   1.6070327   2.484366   -1.5178642  -0.07589482\n",
+      " -0.60906625 -1.5116876   3.2915626  -3.8901231  -2.3225067   5.4058423\n",
+      "  2.6897678   1.3720402   1.3001097   0.06986803 -3.4310882   0.3431276\n",
+      " -2.000019   -1.5987017   3.4761806  -3.130803   -0.4823103   0.63526744\n",
+      " -1.6966465  -1.6946815   1.1866399   2.1364102   0.24674171 -2.814292\n",
+      "  0.12162346 -1.3381917   3.2049303   1.7935071   1.8020983  -2.7525592\n",
+      "  3.2679296  -1.8049885  -0.5194188   0.09404367  0.3067871  -1.7171175 ]\n"
+     ]
+    }
+   ],
+   "source": [
+    "t1 = doc[0]\n",
+    "print(t1.__class__)\n",
+    "print(t1)\n",
+    "# token对应的词向量\n",
+    "print(t1.vector.__class__)\n",
+    "print(t1.vector.shape)\n",
+    "print(t1.vector)"
    ]
   },
   {
@@ -775,9 +910,9 @@
    "source": [
     "---\n",
     "\n",
-    "# Gensim使用\n",
+    "# Gensim\n",
     "\n",
-    "这里使用gensim生成一份词向量。"
+    "gensim是专门用于训练生成词向量的package。"
    ]
   },
   {
@@ -815,10 +950,79 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "from sklearn.datasets import load_files"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'D:\\\\Project-Workspace\\\\Python-Projects\\\\DataAnalysis\\\\ML-Action'"
+      ]
+     },
+     "execution_count": 34,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pwd"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "D:\\Project-Workspace\\Python-Projects\\DataAnalysis\n"
+     ]
+    }
+   ],
+   "source": [
+    "cd .."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "imdb_train = load_files('./datasets/aclImdb/train/')\n",
+    "imdb_test = load_files('./datasets/aclImdb/test/')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "sklearn.utils.Bunch"
+      ]
+     },
+     "execution_count": 39,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "imdb_train.__class__"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -1727,12 +1931,7 @@
   {
    "cell_type": "code",
    "execution_count": 32,
-   "metadata": {
-    "collapsed": true,
-    "jupyter": {
-     "outputs_hidden": true
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "#加载预料\n",
