pytorch RNN和文本练习

--- a/ML-Action/10-text-processing.ipynb
+++ b/ML-Action/10-text-processing.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -11,11 +11,11 @@
      "text": [
       "package版本信息：\n",
       "numpy:       1.19.2\n",
-      "pandas:      1.2.1\n",
-      "matplotlib:  3.3.2\n",
-      "sklearn:     0.22.1\n",
+      "pandas:      1.2.2\n",
+      "matplotlib:  3.3.4\n",
+      "sklearn:     0.23.2\n",
       "seaborn:     0.11.1\n",
-      "plotly:      4.14.1\n"
+      "plotly:      4.14.3\n"
      ]
     }
    ],
@@ -699,7 +699,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -710,12 +710,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "+ 加载语言模型"
+    "+ 加载语言模型  \n",
+    "每个语言模型都是一个Language对象."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -724,7 +725,7 @@
        "spacy.lang.en.English"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -739,7 +740,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -748,7 +749,7 @@
        "spacy.lang.en.English"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -758,6 +759,301 @@
     "import en_core_web_sm\n",
     "nlp = en_core_web_sm.load()\n",
     "nlp.__class__"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {
+    "collapsed": true,
+    "jupyter": {
+     "outputs_hidden": true
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'lang': 'en',\n",
+       " 'name': 'core_web_sm',\n",
+       " 'version': '3.0.0',\n",
+       " 'spacy_version': '>=3.0.0,<3.1.0',\n",
+       " 'description': 'English pipeline optimized for CPU. Components: tok2vec, tagger, parser, senter, ner, attribute_ruler, lemmatizer.',\n",
+       " 'author': 'Explosion',\n",
+       " 'email': 'contact@explosion.ai',\n",
+       " 'url': 'https://explosion.ai',\n",
+       " 'license': 'MIT',\n",
+       " 'spacy_git_version': 'e7db07a0b',\n",
+       " 'vectors': {'width': 0, 'vectors': 0, 'keys': 0, 'name': None},\n",
+       " 'labels': {'tok2vec': [],\n",
+       "  'tagger': ['$',\n",
+       "   \"''\",\n",
+       "   ',',\n",
+       "   '-LRB-',\n",
+       "   '-RRB-',\n",
+       "   '.',\n",
+       "   ':',\n",
+       "   'ADD',\n",
+       "   'AFX',\n",
+       "   'CC',\n",
+       "   'CD',\n",
+       "   'DT',\n",
+       "   'EX',\n",
+       "   'FW',\n",
+       "   'HYPH',\n",
+       "   'IN',\n",
+       "   'JJ',\n",
+       "   'JJR',\n",
+       "   'JJS',\n",
+       "   'LS',\n",
+       "   'MD',\n",
+       "   'NFP',\n",
+       "   'NN',\n",
+       "   'NNP',\n",
+       "   'NNPS',\n",
+       "   'NNS',\n",
+       "   'PDT',\n",
+       "   'POS',\n",
+       "   'PRP',\n",
+       "   'PRP$',\n",
+       "   'RB',\n",
+       "   'RBR',\n",
+       "   'RBS',\n",
+       "   'RP',\n",
+       "   'SYM',\n",
+       "   'TO',\n",
+       "   'UH',\n",
+       "   'VB',\n",
+       "   'VBD',\n",
+       "   'VBG',\n",
+       "   'VBN',\n",
+       "   'VBP',\n",
+       "   'VBZ',\n",
+       "   'WDT',\n",
+       "   'WP',\n",
+       "   'WP$',\n",
+       "   'WRB',\n",
+       "   'XX',\n",
+       "   '``'],\n",
+       "  'parser': ['ROOT',\n",
+       "   'acl',\n",
+       "   'acomp',\n",
+       "   'advcl',\n",
+       "   'advmod',\n",
+       "   'agent',\n",
+       "   'amod',\n",
+       "   'appos',\n",
+       "   'attr',\n",
+       "   'aux',\n",
+       "   'auxpass',\n",
+       "   'case',\n",
+       "   'cc',\n",
+       "   'ccomp',\n",
+       "   'compound',\n",
+       "   'conj',\n",
+       "   'csubj',\n",
+       "   'csubjpass',\n",
+       "   'dative',\n",
+       "   'dep',\n",
+       "   'det',\n",
+       "   'dobj',\n",
+       "   'expl',\n",
+       "   'intj',\n",
+       "   'mark',\n",
+       "   'meta',\n",
+       "   'neg',\n",
+       "   'nmod',\n",
+       "   'npadvmod',\n",
+       "   'nsubj',\n",
+       "   'nsubjpass',\n",
+       "   'nummod',\n",
+       "   'oprd',\n",
+       "   'parataxis',\n",
+       "   'pcomp',\n",
+       "   'pobj',\n",
+       "   'poss',\n",
+       "   'preconj',\n",
+       "   'predet',\n",
+       "   'prep',\n",
+       "   'prt',\n",
+       "   'punct',\n",
+       "   'quantmod',\n",
+       "   'relcl',\n",
+       "   'xcomp'],\n",
+       "  'senter': ['I', 'S'],\n",
+       "  'ner': ['CARDINAL',\n",
+       "   'DATE',\n",
+       "   'EVENT',\n",
+       "   'FAC',\n",
+       "   'GPE',\n",
+       "   'LANGUAGE',\n",
+       "   'LAW',\n",
+       "   'LOC',\n",
+       "   'MONEY',\n",
+       "   'NORP',\n",
+       "   'ORDINAL',\n",
+       "   'ORG',\n",
+       "   'PERCENT',\n",
+       "   'PERSON',\n",
+       "   'PRODUCT',\n",
+       "   'QUANTITY',\n",
+       "   'TIME',\n",
+       "   'WORK_OF_ART'],\n",
+       "  'attribute_ruler': [],\n",
+       "  'lemmatizer': []},\n",
+       " 'pipeline': ['tok2vec',\n",
+       "  'tagger',\n",
+       "  'parser',\n",
+       "  'ner',\n",
+       "  'attribute_ruler',\n",
+       "  'lemmatizer'],\n",
+       " 'components': ['tok2vec',\n",
+       "  'tagger',\n",
+       "  'parser',\n",
+       "  'senter',\n",
+       "  'ner',\n",
+       "  'attribute_ruler',\n",
+       "  'lemmatizer'],\n",
+       " 'disabled': ['senter'],\n",
+       " 'performance': {'token_acc': 0.9993053983000001,\n",
+       "  'tag_acc': 0.9721120187000001,\n",
+       "  'dep_uas': 0.9163332177,\n",
+       "  'dep_las': 0.8977001329000001,\n",
+       "  'ents_p': 0.8483091787,\n",
+       "  'ents_r': 0.8354366987,\n",
+       "  'ents_f': 0.8418237327,\n",
+       "  'sents_p': 0.8979094784,\n",
+       "  'sents_r': 0.8755194934,\n",
+       "  'sents_f': 0.8865731463000001,\n",
+       "  'speed': 10859.3473736922,\n",
+       "  'dep_las_per_type': {'prep': {'p': 0.8527070662,\n",
+       "    'r': 0.8617340163,\n",
+       "    'f': 0.8571967767},\n",
+       "   'det': {'p': 0.9763465375, 'r': 0.9778194569, 'f': 0.9770824421000001},\n",
+       "   'pobj': {'p': 0.9603007636, 'r': 0.9679560181, 'f': 0.964113195},\n",
+       "   'nsubj': {'p': 0.9573928142, 'r': 0.9421248631, 'f': 0.9496974782000001},\n",
+       "   'aux': {'p': 0.9790575916, 'r': 0.9821953174, 'f': 0.9806239445},\n",
+       "   'advmod': {'p': 0.8549869320000001,\n",
+       "    'r': 0.8531886253000001,\n",
+       "    'f': 0.854086832},\n",
+       "   'relcl': {'p': 0.7642653352000001,\n",
+       "    'r': 0.7775761974000001,\n",
+       "    'f': 0.7708633094},\n",
+       "   'root': {'p': 0.9100514766000001,\n",
+       "    'r': 0.8863381490000001,\n",
+       "    'f': 0.8980382983},\n",
+       "   'xcomp': {'p': 0.8736915562, 'r': 0.8987796123, 'f': 0.8860580326},\n",
+       "   'amod': {'p': 0.9145399052000001,\n",
+       "    'r': 0.9124068675,\n",
+       "    'f': 0.9134721411000001},\n",
+       "   'compound': {'p': 0.916965122, 'r': 0.9268211183, 'f': 0.9218667775},\n",
+       "   'poss': {'p': 0.9734833266, 'r': 0.9754428341, 'f': 0.9744620953},\n",
+       "   'ccomp': {'p': 0.7768093975, 'r': 0.8350305499, 'f': 0.8048684727000001},\n",
+       "   'attr': {'p': 0.8984280532000001, 'r': 0.9373423045, 'f': 0.917472731},\n",
+       "   'case': {'p': 0.9772502473,\n",
+       "    'r': 0.9889889890000001,\n",
+       "    'f': 0.9830845771000001},\n",
+       "   'mark': {'p': 0.9032, 'r': 0.8974562798, 'f': 0.9003189793},\n",
+       "   'intj': {'p': 0.6546026751, 'r': 0.6095238095000001, 'f': 0.6312594841},\n",
+       "   'advcl': {'p': 0.6674341264, 'r': 0.6570133468, 'f': 0.6621827411},\n",
+       "   'cc': {'p': 0.8301659851000001, 'r': 0.8254993422, 'f': 0.827826087},\n",
+       "   'neg': {'p': 0.9471057884,\n",
+       "    'r': 0.9523331661000001,\n",
+       "    'f': 0.9497122842000001},\n",
+       "   'conj': {'p': 0.7557513461, 'r': 0.7774420947, 'f': 0.7664432862},\n",
+       "   'nsubjpass': {'p': 0.9228764982000001,\n",
+       "    'r': 0.9082051282,\n",
+       "    'f': 0.9154820367000001},\n",
+       "   'auxpass': {'p': 0.9466903598, 'r': 0.9708428246, 'f': 0.9586144849},\n",
+       "   'dobj': {'p': 0.9196734059, 'r': 0.9424655351000001, 'f': 0.9309299854},\n",
+       "   'nummod': {'p': 0.9364191251, 'r': 0.9297979798, 'f': 0.9330968069000001},\n",
+       "   'npadvmod': {'p': 0.7637178052, 'r': 0.7268206039, 'f': 0.7448125228},\n",
+       "   'prt': {'p': 0.8143564356, 'r': 0.8844086022000001, 'f': 0.8479381443},\n",
+       "   'pcomp': {'p': 0.8705388383, 'r': 0.8711484594000001, 'f': 0.8708435422},\n",
+       "   'expl': {'p': 0.9789029536, 'r': 0.9935760171, 'f': 0.9861849097000001},\n",
+       "   'acl': {'p': 0.7324106113000001,\n",
+       "    'r': 0.6928532460000001,\n",
+       "    'f': 0.7120829829},\n",
+       "   'agent': {'p': 0.8938356164,\n",
+       "    'r': 0.9354838710000001,\n",
+       "    'f': 0.9141856392000001},\n",
+       "   'dative': {'p': 0.7704485488, 'r': 0.6697247706, 'f': 0.7165644172000001},\n",
+       "   'acomp': {'p': 0.9058931019, 'r': 0.8993197279, 'f': 0.902594447},\n",
+       "   'dep': {'p': 0.4608695652, 'r': 0.1720779221, 'f': 0.2505910165},\n",
+       "   'csubj': {'p': 0.6709677419, 'r': 0.6153846154, 'f': 0.6419753086000001},\n",
+       "   'quantmod': {'p': 0.8619768477, 'r': 0.7863525589, 'f': 0.8224299065},\n",
+       "   'nmod': {'p': 0.7531948882, 'r': 0.5746496039, 'f': 0.6519184238},\n",
+       "   'appos': {'p': 0.6889692586, 'r': 0.6611713666, 'f': 0.6747841488},\n",
+       "   'predet': {'p': 0.8442622951000001, 'r': 0.8841201717, 'f': 0.8637316562},\n",
+       "   'preconj': {'p': 0.580952381, 'r': 0.7093023256000001, 'f': 0.6387434555},\n",
+       "   'oprd': {'p': 0.8193548387, 'r': 0.7582089552, 'f': 0.7875968992},\n",
+       "   'parataxis': {'p': 0.5831134565, 'r': 0.4793926247, 'f': 0.5261904762},\n",
+       "   'meta': {'p': 0.4705882353, 'r': 0.3076923077, 'f': 0.3720930233},\n",
+       "   'csubjpass': {'p': 0.8333333333, 'r': 0.8333333333, 'f': 0.8333333333}},\n",
+       "  'ents_per_type': {'DATE': {'p': 0.8645768025,\n",
+       "    'r': 0.8755555556,\n",
+       "    'f': 0.8700315457000001},\n",
+       "   'GPE': {'p': 0.9231436001000001, 'r': 0.8912133891, 'f': 0.9068975305},\n",
+       "   'ORDINAL': {'p': 0.7709497207, 'r': 0.8571428571, 'f': 0.8117647059},\n",
+       "   'ORG': {'p': 0.8055629139, 'r': 0.8062036055, 'f': 0.8058831324},\n",
+       "   'QUANTITY': {'p': 0.8235294118, 'r': 0.6153846154, 'f': 0.7044025157},\n",
+       "   'CARDINAL': {'p': 0.8196721311, 'r': 0.8620689655, 'f': 0.8403361345},\n",
+       "   'PERSON': {'p': 0.8394070414,\n",
+       "    'r': 0.8870757180000001,\n",
+       "    'f': 0.8625833069000001},\n",
+       "   'NORP': {'p': 0.910801964, 'r': 0.8904000000000001, 'f': 0.9004854369},\n",
+       "   'FAC': {'p': 0.375, 'r': 0.30000000000000004, 'f': 0.33333333330000003},\n",
+       "   'TIME': {'p': 0.7392638037, 'r': 0.7046783626, 'f': 0.7215568862},\n",
+       "   'LOC': {'p': 0.7425373134000001, 'r': 0.6337579618, 'f': 0.6838487973},\n",
+       "   'WORK_OF_ART': {'p': 0.4608695652,\n",
+       "    'r': 0.27319587630000003,\n",
+       "    'f': 0.3430420712},\n",
+       "   'LAW': {'p': 0.5641025641,\n",
+       "    'r': 0.34375000000000006,\n",
+       "    'f': 0.42718446600000004},\n",
+       "   'EVENT': {'p': 0.5913978495000001,\n",
+       "    'r': 0.316091954,\n",
+       "    'f': 0.41198501870000004},\n",
+       "   'MONEY': {'p': 0.9208633094,\n",
+       "    'r': 0.9067296340000001,\n",
+       "    'f': 0.9137418203000001},\n",
+       "   'PERCENT': {'p': 0.9106858054, 'r': 0.8744257274, 'f': 0.8921874999999999},\n",
+       "   'LANGUAGE': {'p': 0.7407407407000001, 'r': 0.625, 'f': 0.6779661017},\n",
+       "   'PRODUCT': {'p': 0.6144578313, 'r': 0.2417061611, 'f': 0.3469387755}}},\n",
+       " 'sources': [{'name': 'OntoNotes 5',\n",
+       "   'url': 'https://catalog.ldc.upenn.edu/LDC2013T19',\n",
+       "   'license': 'commercial (licensed by Explosion)'}],\n",
+       " 'requirements': []}"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# 语言模型的信息\n",
+    "nlp.meta"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "WindowsPath('D:/MyProgramFiles/Anaconda/lib/site-packages/en_core_web_sm/en_core_web_sm-3.0.0')"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "nlp.path"
    ]
   },
   {
@@ -779,6 +1075,41 @@
    "source": [
     "# 检查当前pipeline里的步骤名称\n",
     "nlp.pipe_names"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<spacy.vocab.Vocab object at 0x00000185AF7103A8>\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "761"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "print(nlp.vocab)\n",
+    "len(nlp.vocab)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "+ 文档的Doc对象"
    ]
   },
   {
@@ -860,6 +1191,13 @@
     "print(\"token.text\", \"token.lemma_\")\n",
     "for token in doc:\n",
     "    print(token.text,  token.lemma_)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "+ 单词的Token对象"
    ]
   },
   {
