pytorch: IMDB的dataset封装练习以及LSTM分类练习

--- a/ML-Action/06-pytorch-tutorial.ipynb
+++ b/ML-Action/06-pytorch-tutorial.ipynb
@@ -1946,14 +1946,21 @@
    "source": [
     "----\n",
     "\n",
-    "# 数据加载器\n",
+    "# 数据加载和变换\n",
+    "\n",
+    "详细说明可以参考官方文档 [WRITING CUSTOM DATASETS, DATALOADERS AND TRANSFORMS](https://pytorch.org/tutorials/beginner/data_loading_tutorial.html).\n",
     "\n",
     "一般训练的时候，需要对数据进行分batch进行，为了更方便的提供数据，Pytorch提供了 `torch.utils.data` 包用于辅助处理数据。  \n",
     "这里面主要有两个类：\n",
-    "1. `data.DataSet()`，提供对数据的封装\n",
-    "2. `data.DataLoader()`，在 `DataSet`上进行迭代，每次返回一个 batch 的数据\n",
+    "1. `data.DataSet()`，一个抽象类，提供对数据的封装。\n",
+    "2. `data.DataLoader()`，在 `DataSet`上进行迭代，每次返回一个 batch 的数据，并且可以实现 shuffle 和 多进程读取。\n",
     "\n",
-    "+ "
+    "+ 自定义数据集需要做如下步骤：\n",
+    "  1. 编写一个类，继承`data.DataSet`类\n",
+    "  2. 实现`__len__()`方法和 `__getitem__()` 方法\n",
+    "  \n",
+    "  \n",
+    "+ 自定义数据集类之后，只需要将它传递给`data.DataLoader()`类作为初始化参数即可返回一个可迭代的对象，在此对象上执行分批操作即可."
    ]
   },
   {
