--- a/ML-Action/06-pytorch-tutorial.ipynb
+++ b/ML-Action/06-pytorch-tutorial.ipynb
@@ -4132,9 +4132,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Tensorflow-1.15(Python3.6.12)",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "tensorflow1.15"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -4146,7 +4146,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.12"
+   "version": "3.7.6"
   },
   "toc-autonumbering": true
  },
