pytorch: transformer练习和损失函数练习

--- a/ML-Action/06-pytorch-tutorial.ipynb
+++ b/ML-Action/06-pytorch-tutorial.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -1566,24 +1566,18 @@
    "source": [
     "### 对数似然误差\n",
     "\n",
-    "对数似然误差(Negative Log Likelihood Loss, 缩写为**NLLL**)对应的类是 `nn.NLLLoss()`，可以用于多分类问题 .    \n",
+    "对数似然误差(Negative Log Likelihood Loss, 缩写为**NLLL**)对应的类是 `nn.NLLLoss()`，通常用于多分类问题 .    \n",
+    "\n",
     "它实例化的对象接受的参数为`(Input, Target)`：\n",
-    "+ `Input`的 `shape=(batch_size, C)`，$C$ 是类别的个数\n",
-    "+ `Target`的 `shape=(batch_size)`"
+    "+ `Input`的 `shape=(batch_size, C)`，$C$ 是类别的个数。其中每一行的值应当是经过 softmax 之后 取对数的结果——也就是所谓的 Log Likelihood.\n",
+    "+ `Target`的 `shape=(batch_size)`\n",
+    "\n",
+    "这个类的构造函数里有一个 `reduction='mean'` 的参数，表示会将得到的结果进行reduce，方式是取均值。"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "nll = nn.NLLLoss()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -1600,7 +1594,10 @@
       "        [1., 0.],\n",
       "        [0., 1.]], requires_grad=True)\n",
       "\n",
-      "Negative-Likehood-Log-Loss:\n",
+      "Negative-Likehood-Log-Loss (关闭 reduce):\n",
+      "tensor([-0., -1., -0.], grad_fn=<NllLossBackward>)\n",
+      "\n",
+      "Negative-Likehood-Log-Loss (reduce='mean'):\n",
       "tensor(-0.3333, grad_fn=<NllLossBackward>)\n"
      ]
     }
@@ -1616,10 +1613,78 @@
     "print(\"y_pred:\")\n",
     "print(y_pred)\n",
     "\n",
+    "nll = nn.NLLLoss(reduction='none') # 关闭 reduce\n",
     "loss = nll(y_pred, y_true)\n",
     "\n",
-    "print(\"\\nNegative-Likehood-Log-Loss:\")\n",
+    "print(\"\\nNegative-Likehood-Log-Loss (关闭 reduce):\")\n",
+    "print(loss)\n",
+    "\n",
+    "nll = nn.NLLLoss() # 打开 reduce，默认为mean\n",
+    "loss = nll(y_pred, y_true)\n",
+    "\n",
+    "print(\"\\nNegative-Likehood-Log-Loss (reduce='mean'):\")\n",
     "print(loss)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "上面的例子演示了该损失函数的工作方式： \n",
+    "+ 对于一个二分类的问题，有 3 个样本，\n",
+    "+ 输入的 `y_true.shape=[3]`，每个元素是实际的类别 0 或 1。如果是多分类，有 $C$ 个类别，那么取值就是 $[0, C-1]$.\n",
+    "+ 输入的 `y_pred.shape=[3, 2]`, 每一行是长度=2的向量，向量的每个值对应于取该类别的概率——**实际输入时这个应该是经过 softmax + log 之后的 log likelyhood**。\n",
+    "+ 在 `reduce='none'`时，NLLLoss 会将 `y_true` 看做 `y_pred` 中每一行的索引，取出其中的值，并加上 负号。  \n",
+    "这是因为 `y_true`中的元素取值为 $[0, C-1]$，就是 `y_pred` 每一行的长度，用于从中获得该样本取每一类的对数概率。\n",
+    "+ `reduce='mean'`时，就是将上述结果进行聚合。\n",
+    "\n",
+    "实际中使用时，NLLOSS 的输入通常是经过 `nn.LogSoftmax` 变换得到的，下面是一个完整的例子（源自官方文档）。"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "input_tensor:\n",
+      " tensor([[-0.7142, -1.4875, -0.9207, -0.1043, -0.0645],\n",
+      "        [ 0.5339,  0.2950,  0.4972, -0.7490,  1.0334],\n",
+      "        [-0.2580, -1.1683, -0.9682, -0.8448, -0.2316]], requires_grad=True)\n",
+      "\n",
+      " LogSoftmax out:\n",
+      " tensor([[-1.7968, -2.5701, -2.0033, -1.1869, -1.1470],\n",
+      "        [-1.5426, -1.7815, -1.5793, -2.8255, -1.0430],\n",
+      "        [-1.2461, -2.1564, -1.9563, -1.8329, -1.2197]],\n",
+      "       grad_fn=<LogSoftmaxBackward>)\n",
+      "\n",
+      " NLLoss out:\n",
+      " tensor(1.7775, grad_fn=<NllLossBackward>)\n"
+     ]
+    }
+   ],
+   "source": [
+    "# NLLoss损失函数官方示例\n",
+    "logsoftmax = nn.LogSoftmax(dim=1)\n",
+    "loss = nn.NLLLoss()\n",
+    "\n",
+    "# 输入的 size N x C = 3 x 5， 表示 3 个样本，类别是 5 类\n",
+    "input = torch.randn(3, 5, requires_grad=True)\n",
+    "print(\"input_tensor:\\n\", input)\n",
+    "\n",
+    "# each element in target has to have 0 <= value < C\n",
+    "target = torch.tensor([1, 0, 4])\n",
+    "\n",
+    "# 先对 input 做 softmax + log 变换，每一行表示取各个类别的对数概率\n",
+    "logsoftmax_out = logsoftmax(input)\n",
+    "print(\"\\n LogSoftmax out:\\n\", logsoftmax_out)\n",
+    "\n",
+    "# 将 LogSoftmax 的结果作为 输入\n",
+    "output = loss(logsoftmax_out, target)\n",
+    "print(\"\\n NLLoss out:\\n\", output)"
    ]
   },
   {
@@ -1628,7 +1693,7 @@
    "source": [
     "### 交叉熵误差\n",
     "\n",
-    "`nn.CrossEntropyLoss()`可以用于多分类问题 .    \n",
+    "`nn.CrossEntropyLoss()`可以用于多分类问题，它就是对 `nn.LogSoftmax` + `nn.NLLLoss` 的封装 .    \n",
     "它实例化的对象接受的参数为`(Input, Target)`：\n",
     "+ `Input`的 `shape=(batch_size, C)`，$C$ 是类别的个数\n",
     "+ `Target`的 `shape=(batch_size)`"
