--- a/ML-Action/11-Transformer.ipynb
+++ b/ML-Action/11-Transformer.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "classical-penny",
+   "id": "western-testing",
    "metadata": {},
    "outputs": [
     {
@@ -51,7 +51,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "hungarian-clinic",
+   "id": "olympic-shepherd",
    "metadata": {},
    "source": [
     "# 基础\n",
@@ -88,7 +88,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "permanent-chinese",
+   "id": "advance-finnish",
    "metadata": {},
    "source": [
     "transformer源码中，所有的模型结构都存放在 `/src/transformers/models`文件夹下，每个模型对应于一个文件夹（比如BERT对应的就是`bert`文件夹），每个模型的文件夹内，主要有如下几个`.py`文件，其中的 `xxx` 是对应模型的名称：\n",
@@ -100,13 +100,27 @@
     "+ `tokenization_xxx_fast.py`，快速分词的实现类\n",
     "+ `convert_*.py`，用于将其它配置文件转换成对应的模型。\n",
     "\n",
-    "我一般常用的两个模型是 **BERT** 和 **Distill-BERT**，所以下面会着重关注这两个模型里的实现。"
+    "\n",
+    "我一般常用的两个模型是 **BERT** 和 **Distil-BERT**，所以下面会着重关注这两个模型里的实现。\n",
+    "\n",
+    "+ [BERT Models](https://huggingface.co/transformers/model_doc/bert.html) 包含如下类（以pytorch为例）\n",
+    "  + `BertConfig`，配置类\n",
+    "  + `BertTokenizer`，分词的类，基于 `WordPiece`\n",
+    "  + `BertModel`，最基本的 BERT 模型类，它返回的是 BERT 模型的原始结果，包括隐藏层状态.\n",
+    "  + `BertForPreTraining`，在 `BertModel`的输出上加了一层处理，以下的几个模型都是如此.\n",
+    "  + `BertForMaskedLM`\n",
+    "  + `BertForNextSentencePrediction`\n",
+    "  + `BertForSequenceClassification`\n",
+    "  + 还有其他的一些基础工具类和其他任务对于的BERT模型类，这里就不介绍了。\n",
+    "  \n",
+    "\n",
+    "+ [DistilBERT Models](https://huggingface.co/transformers/model_doc/distilbert.html) 包含如下类"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "clinical-inclusion",
+   "id": "satellite-drove",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -116,9 +130,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Tensorflow-1.15(Python3.6.12)",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "tensorflow1.15"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -130,7 +144,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.12"
+   "version": "3.7.6"
   }
  },
  "nbformat": 4,
