--- a/ML-Action/11-Transformer.ipynb
+++ b/ML-Action/11-Transformer.ipynb
@@ -2,8 +2,8 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "id": "western-testing",
+   "execution_count": 3,
+   "id": "responsible-beginning",
    "metadata": {},
    "outputs": [
     {
@@ -51,7 +51,145 @@
   },
   {
    "cell_type": "markdown",
-   "id": "olympic-shepherd",
+   "id": "original-thousand",
+   "metadata": {},
+   "source": [
+    "# Pytorch-Transformer"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "plain-mining",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from torch import nn"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "breeding-allowance",
+   "metadata": {},
+   "source": [
+    "## MultiheadAttention Layer\n",
+    "\n",
+    "需要注意的是，pytorch源码中 `MultiheadAttention` 被放在了 Non-linear Activations 这一类中（并且是放在`activation.py`文件中的）。\n",
+    "\n",
+    "`MultiheadAttention(embed_dim, num_heads, dropout=0.0, bias=True, add_bias_kv=False, add_zero_attn=False, kdim=None, vdim=None)`\n",
+    "+ 参数\n",
+    "  + `embed_dim`，\n",
+    "  + `num_heads`，\n",
+    "  + `bias`，\n",
+    "  + `add_bias_kv`\n",
+    "  + `add_zero_attn`\n",
+    "  + `kdim`，key 中的特征数量\n",
+    "  + `vidm`，value 中的特征数量\n",
+    "\n",
+    "\n",
+    "+ `forward(query, key, value, key_padding_mask=None, need_weights=True, attn_mask=None)`\n",
+    "  + `query`, `key`, `value`，self-attention的三个输入向量\n",
+    "    + `query.shape` = $(L, N, E)$，\n",
+    "    + `key.shape` = $(S, N, E)$\n",
+    "    + `value.shape` = $(S, N, E)$\n",
+    "  \n",
+    "  其中 $E$ 是输入的 embedding 长度， $S$ 是输入序列的长度，$L$ 是输出序列的长度， $N$ 是batch size.\n",
+    "  + `key_padding_mask`，\n",
+    "  + `need_weights`，bool，表示是否需要输出attention的weights\n",
+    "  + `attn_mask`，2维或者3维的mask\n",
+    "\n",
+    "\n",
+    "+ `forward()`方法返回值\n",
+    "  + `attn_output`，shape= $(L, N, E)$，$L$ 是最长的序列长度\n",
+    "  + `attn_output_weights`，shape=$(N, L, S)$"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "trained-airport",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "embed_dim = 512\n",
+    "num_heads = 8\n",
+    "multihead_attn = nn.MultiheadAttention(embed_dim, num_heads)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "dated-assignment",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "E, S, L, N = embed_dim, 20, 10, 5\n",
+    "query = torch.rand(L, N, E)\n",
+    "key = torch.rand(S, N, E)\n",
+    "value = torch.rand(S, N, E)\n",
+    "\n",
+    "attn_output, attn_output_weights = multihead_attn(query, key, value)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "surprising-grove",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "torch.Size([10, 5, 512])\n",
+      "torch.Size([5, 10, 20])\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(attn_output.shape)\n",
+    "print(attn_output_weights.shape)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "front-leonard",
+   "metadata": {},
+   "source": [
+    "## Encoder Layer\n",
+    "\n",
+    "`nn.TransformerEncoderLayer(d_model, nhead, dim_feedforward=2048, dropout=0.1, activation='relu')`\n",
+    "+ 参数\n",
+    "  + `d_model`，输入的特征个数\n",
+    "  + `nhead`，multiheadattention中的head个数\n",
+    "  + `dim_feedforward`，前馈神经网络里的个数\n",
+    "  \n",
+    "+ `.forward(src, src_mask=None, src_key_padding_mask=None)` 方法\n",
+    "  + `src`，输入的sequence\n",
+    "  + `src_mask`，输入sequence的mask\n",
+    "  + `src_key_padding_mask`，每个batch中src的padding\n",
+    "  \n",
+    "+ `forward()`方法返回值\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "alive-madison",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "d_model = 512\n",
+    "nhead = 8\n",
+    "dim_ffn = \n",
+    "encoder_layer = nn.TransformerEncoderLayer(d_model=512, nhead=8)\n",
+    "src = torch.rand(10, 32, 512)\n",
+    "out = encoder_layer(src)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "armed-aruba",
    "metadata": {},
    "source": [
     "# 基础\n",
@@ -88,7 +226,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "advance-finnish",
+   "id": "double-sally",
    "metadata": {},
    "source": [
     "transformer源码中，所有的模型结构都存放在 `/src/transformers/models`文件夹下，每个模型对应于一个文件夹（比如BERT对应的就是`bert`文件夹），每个模型的文件夹内，主要有如下几个`.py`文件，其中的 `xxx` 是对应模型的名称：\n",
@@ -120,7 +258,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "satellite-drove",
+   "id": "immune-transcription",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -130,9 +268,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Tensorflow-1.15(Python3.6.12)",
    "language": "python",
-   "name": "python3"
+   "name": "tensorflow1.15"
   },
   "language_info": {
    "codemirror_mode": {
@@ -144,7 +282,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.6.12"
   }
  },
  "nbformat": 4,
